# EcatV2_Master

./: .gitignore  .gitmodules  readme.md
docs/: configuration-generator.md  environment-setup.md  faq.md  first-run-test.md
docs/task-info/: dji-motor.md  dji-rc.md  dm-motor.md  hipnuc-imu-can.md  lk-motor.md  onboard-pwm.md  pmu-can.md  sbus-rc.md
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/msg/: ReadDJICAN.msg  ReadDJIMotor.msg  ReadDmMotor.msg  ReadLkMotor.msg  ReadVT13RemoteControl.msg  WriteDmMotorPositionControlWithSpeedLimit.msg  WriteDmMotorPositionControlWithSpeedLimitGrouped.msg  WriteDmMotorSpeedControl.msg
src/soem/: CMakeLists.txt  package.xml
src/soem/osal/: osal.h
src/soem/osal/erika/: osal.c  osal_defs.h
src/soem/osal/intime/: osal.c  osal_defs.h
src/soem/osal/linux/: osal.c  osal_defs.h
src/soem/osal/macosx/: osal.c
src/soem/osal/rtk/: osal.c
src/soem/osal/vxworks/: osal.c
src/soem/osal/win32/: osal.c  osal_win32.h
src/soem/oshw/erika/: nicdrv.c  nicdrv.h  oshw.c
src/soem/oshw/intime/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
src/soem/oshw/linux/: nicdrv.c  nicdrv.h  oshw.c
src/soem/oshw/macosx/: nicdrv.c  nicdrv.h  oshw.c
src/soem/oshw/rtems/: nicdrv.c  nicdrv.h  oshw.c
src/soem/oshw/rtk/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
src/soem/oshw/rtk/fec/: fec_ecat.c  fec_ecat.h
src/soem/oshw/rtk/lw_mac/: lw_emac.c  lw_emac.h
src/soem/oshw/vxworks/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
src/soem/oshw/win32/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
src/soem/oshw/win32/wpcap/Include/: Packet32.h  Win32-Extensions.h  pcap-stdinc.h  remote-ext.h
src/soem/oshw/win32/wpcap/Include/pcap/: bpf.h  namedb.h  pcap.h  sll.h  usb.h  vlan.h
src/soem/soem/: ethercatbase.c  ethercatbase.h  ethercatcoe.c  ethercatcoe.h  ethercatconfig.c  ethercatconfig.h  ethercatconfiglist.h  ethercatdc.c  ethercatdc.h  ethercateoe.c  ethercateoe.h  ethercatfoe.c  ethercatfoe.h  ethercatmain.c  ethercatmain.h  ethercatprint.c  ethercatprint.h  ethercatsoe.c  ethercatsoe.h  ethercattype.h
src/soem_wrapper/: CMakeLists.txt
src/soem_wrapper/config/: config.yaml
src/soem_wrapper/include/soem_wrapper/: dynamic_data_helper.hpp  ecat_node.hpp  ethercat_node.hpp  task_defs.hpp  utils.hpp  wrapper.hpp
src/soem_wrapper/include/soem_wrapper/defs/: app_defs.hpp  msg_defs.hpp  packet_defs.h  task_defs.hpp
src/soem_wrapper/include/soem_wrapper/utils/: io_utils.hpp  logger_utils.hpp  sys_utils.hpp
src/soem_wrapper/src/: dynamic_data_helper.cpp  ecat_node.cpp  soem_backend.cpp
src/soem_wrapper/src/tasks/: dd_motor.cpp  dji_motor.cpp  dji_rc.cpp  dm_motor.cpp  dshot.cpp  hipnuc_imu_can.cpp  lk_motor.cpp  ms5837_30ba.cpp  onboard_pwm.cpp  sbus_rc.cpp  super_cap.cpp  vt13_rc.cpp
src/soem_wrapper/src/utils/: io_utils.cpp  logger_utils.cpp  sys_utils.cpp
